fix logo overlaying dates on smaller window sizes

--- a/23/styles.css
+++ b/23/styles.css
@@ -44,7 +44,6 @@ main>div {
   grid-area: logo;
   width: 88vw;
 
-  height: 20vh;
   margin-inline: auto;
   position: relative;
   margin-bottom: -6rem;
